[project]
name = "flask-toastedmarshmallow"
version = "1.2.0"
description = "Flask + marshmallow for beautiful APIs, forked to use toastedmarshmallow"
readme = "README.rst"
license = { file = "LICENSE" }
maintainers = [
  { name = "Joey Mart", email = "JosefDavidMart@gmail.com" }
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = ["Flask>=2.2", "toastedmarshmallow>=2.15.2"]

[project.urls]
Issues = "https://github.com/joeymart/flask-toastedmarshmallow/issues"
Funding = "https://opencollective.com/marshmallow"

[project.optional-dependencies]
docs = [
  "marshmallow-sqlalchemy>=0.19.0",
  "Sphinx==7.2.6",
  "sphinx-issues==4.0.0",
]
tests = ["flask-toastedmarshmallow[sqlalchemy]", "pytest"]
dev = ["flask-toastedmarshmallow[tests]", "tox", "pre-commit~=3.5"]
sqlalchemy = ["flask-sqlalchemy>=3.0.0", "toasted-marshmallow-sqlalchemy>=1.0.0"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = ["docs/", "tests/", "CHANGELOG.rst", "CONTRIBUTING.rst", "tox.ini"]
exclude = ["docs/_build/"]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
show-source = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:distutils Version classes are deprecated\\. Use packaging.version instead\\.:DeprecationWarning:marshmallow",
]
